force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FN-100</fullName>
            </value>
            <value>
                <fullName>FN-200</fullName>
            </value>
            <value>
                <fullName>FN-300</fullName>
            </value>
            <value>
                <fullName>FN-400</fullName>
            </value>
            <value>
                <fullName>HR-500</fullName>
            </value>
            <value>
                <fullName>HR-600</fullName>
            </value>
            <value>
                <fullName>HR-700</fullName>
            </value>
            <value>
                <fullName>IT-100</fullName>
            </value>
            <value>
                <fullName>IT-200</fullName>
            </value>
            <value>
                <fullName>IT-800</fullName>
            </value>
            <value>
                <fullName>MC-400</fullName>
            </value>
            <value>
                <fullName>MC-800</fullName>
            </value>
            <value>
                <fullName>MC-900</fullName>
            </value>
            <value>
                <fullName>RO-200</fullName>
            </value>
            <value>
                <fullName>RO-400</fullName>
            </value>
            <value>
                <fullName>RO-700</fullName>
            </value>
            <value>
                <fullName>WH-400</fullName>
            </value>
            <value>
                <fullName>WH-500</fullName>
            </value>
            <value>
                <fullName>WH-700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>