force-app/main/default/objects/Position__c/recordTypes/position_record_type.recordType-meta.xml
<RecordType>
    <fullName>position_record_type</fullName>
    <active>true</active>
    <label>position record type</label>
</RecordType>