force-app/main/default/objects/Position__c/validationRules/CloseNotSpecified.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseNotSpecified</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK( Close_Date__c ),
 OR( ISPICKVAL(Status__c,&apos;Closed - Filled&apos;),
  ISPICKVAL(Status__c,&apos;Closed - Not Approved&apos;) ,
 ISPICKVAL(Status__c,&apos;Closed - Canceled&apos;) ) 
 )</errorConditionFormula>
    <errorMessage>Please Populate Close Date.</errorMessage>
</ValidationRule>