force-app/main/default/objects/Position__c/validationRules/MINpayNotGreaterMax.validationRule-meta.xml
<ValidationRule>
    <fullName>MINpayNotGreaterMax</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
    <errorMessage>Min pay should never be greater than Max pay.</errorMessage>
</ValidationRule>