force-app/main/default/objects/Position__c/listViews/Open_Position.listView-meta.xml
<ListView>
    <fullName>Open_Position</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Mine</filterScope>
    <label>Open Position</label>
</ListView>