force-app/main/default/objects/Position__c/listViews/Technical_Positions.listView-meta.xml
<ListView>
    <fullName>Technical_Positions</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Position__c.Technical_Position</value>
    </filters>
    <label>Technical Positions</label>
</ListView>